# cookiecutter-sphinx-extension

./: README.md  Taskfile.yaml  aqua.yaml  biome.json  cookiecutter.json  main.py  pyproject.toml  renovate.json5
.github/workflows/: ci.yaml  main.yaml  main.yml
hooks/: post_gen_project.sh
{{cookiecutter.project_basename}}/: .age.toml  .python-version  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yml  pyproject.toml  renovate.json5  setup.cfg
{{cookiecutter.project_basename}}/.github/: release-body.md
{{cookiecutter.project_basename}}/.github/workflows/: ci.yaml  deploy-docs.yaml  deploy-docs.yml  main.yaml  main.yml  release.yaml  release.yml
{{cookiecutter.project_basename}}/doc/: conf.py
{{cookiecutter.project_basename}}/docs/: conf.py  index.rst
{{cookiecutter.project_basename}}/src/atsphinx/: {{cookiecutter.project_basename}}.py
{{cookiecutter.project_basename}}/src/atsphinx/{{cookiecutter.package_basename}}/: __init__.py
{{cookiecutter.project_basename}}/tests/: test_it.py
{{cookiecutter.project_basename}}/tests/test-root/: conf.py  index.rst
