[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_name }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation :: Sphinx",
]
readme = "README.rst"
dependencies = [
  "sphinx",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest ==7.*",
]

[project.urls]
Home = "https://github.com/atsphinx/{{ cookiecutter.project_basename }}"

[tool.flit.module]
name = "{{ cookiecutter.package_fullname }}"

[tool.flit.sdist]
exclude = [".github", "tests"]
