[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
license = "Apache-2.0"
requires-python = ">= {{ cookiecutter.requires_python }}"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    {%- if cookiecutter.requires_python in ["3.9"] %}
    "Programming Language :: Python :: 3.9",
    {%- endif %}
    {%- if cookiecutter.requires_python in ["3.9", "3.10"] %}
    "Programming Language :: Python :: 3.10",
    {%- endif %}
    {%- if cookiecutter.requires_python in ["3.9", "3.10", "3.11"] %}
    "Programming Language :: Python :: 3.11",
    {%- endif %}
    {%- if cookiecutter.requires_python in ["3.9", "3.10", "3.11", "3.12"] %}
    "Programming Language :: Python :: 3.12",
    {%- endif %}
    {%- if cookiecutter.requires_python in ["3.9", "3.10", "3.11", "3.12", "3.13"] %}
    "Programming Language :: Python :: 3.13",
    {%- endif %}
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
readme = "README.rst"
dependencies = [
    "sphinx",
]

[project.urls]
Home = "https://github.com/atsphinx/{{ cookiecutter.project_basename }}"
Documentation = "https://atsphinx.github.io/{{ cookiecutter.project_basename }}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "doc8",
    "esbonio",
    "mypy",
    "ruff",
    "types-docutils>=0.21.0.20241128",
]
docs = [
    "atsphinx-mini18n",
    "furo",
    "sphinx-autobuild",
    "sphinx-intl",
]
test = [
    "pytest",
]

[tool.uv]
managed = true

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atsphinx"]
only-includes = ["src/atsphinx"]

[tool.mypy]
exclude = 'conf\.py$'

[[tool.mypy.overrides]]
module = ['docutils', 'docutils.*']
ignore_missing_imports = true
